[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Levels/visibilityEnabler2D.gd" type="Script" id=1]

[node name="SegmentEnabler" type="VisibilityNotifier2D"]
modulate = Color( 1, 0.654902, 0, 1 )
rect = Rect2( 0, 0, 1, 1 )
script = ExtResource( 1 )

[connection signal="screen_entered" from="." to="." method="_on_camera_entered"]
[connection signal="screen_exited" from="." to="." method="_on_camera_exited"]
